# vitrine

./: .gitignore  LICENSE  README.md  docker-compose.yml
vitrine_backend/: .dockerignore  .env.example  Dockerfile  README.md  pyproject.toml  requirements.txt
vitrine_backend/app/: cli.py  limiter.py  main.py
vitrine_backend/app/adapters/alterdata/: config.py  db.py  product_source.py  transaction_source.py
vitrine_backend/app/api/: deps.py
vitrine_backend/app/api/routes/: admin.py  auth.py  bi.py  email.py  (+5 more)
vitrine_backend/app/application/: config_service.py  scheduler.py  scheduler_manager.py  sync_service.py
vitrine_backend/app/core/: config.py  error_handler.py  logging_config.py  timer.py
vitrine_backend/app/domain/: enums.py
vitrine_backend/app/etl/: run_etl.py
vitrine_backend/app/schemas/: bi_schema.py  configuracao_schema.py  email_schema.py  endereco_schema.py  inventario_schema.py  produto_schema.py  sync_schema.py  usuario_schema.py  whatsapp_schema.py
vitrine_backend/scripts/: create_admin.py
vitrine_backend/tests/: test_inventario.py
vitrine_backend/tests/api/: conftest.py  test_api.py  test_bi_endpoints.py  test_email_contatos.py  test_whatsapp_contatos.py
vitrine_backend/tests/etl/: test_transform.py
vitrine_backend/tests/models/: test_produto_model.py
vitrine_backend/tests/schemas/: test_produto_schema.py
vitrine_backend/tests/services/: test_auth_service.py  test_config_service.py  test_produto_service.py
vitrine_backend/tests/utils/: test_codigo.py  test_security.py
vitrine_backend/tests/value_objects/: test_endereco.py
(+149 files in other folders)
